# kinectboard

./: .gitignore  CMakeLists.txt  README.md  kinectboard.c  kinectboard_controls.c  kinectboard_controls.h  kinectboard_images.c  kinectboard_images.h
CMakeModules/: FindLIBFREENECT.cmake
Vortrag/: PRVortrag.tex
common/Awesomium/: awesomium_capi.h
data/: ui.css  ui.html
kinectboard/: CMakeLists.txt  cudadeviceinfo.cu  glow.cu  kinect.cpp  kinectboard.cpp  kinectboard.cu  loadimg.cu  maskrgb.cu  median.cu  quickselect.cu
kinectboard/include/: cudadeviceinfo.h  glow.h  kinect.h  loadimg.h  maskrgb.h  median.h
util/: CMakeLists.txt  kinectboard_controls.c  kinectboard_controls.h  kinectboard_images.c  kinectboard_images.h  kinectboard_ui.c  kinectboard_ui.h
